--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.0.0",
   "description": "Voyant API client",
   "private": true,
+  "main": "./server",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "bash ./bash/npm/lint.sh",
+    "start": "bash ./bash/npm/start.sh"
   },
   "repository": {
     "type": "git",
