--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "debug": "2.6.0",
     "express": "4.15.2",
     "morgan": "1.7.0",
+    "passport": "^0.3.2",
+    "passport-github": "^1.1.0",
     "request": "^2.81.0"
   }
 }
