--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "passport-github": "^1.1.0",
     "pg": "^6.2.3",
     "request": "^2.81.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.12.1"
   }
 }
