--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "passport": "^0.4.0",
     "passport-github": "^1.1.0",
     "pg": "^6.2.3",
-    "request": "^2.81.0"
+    "request": "^2.81.0",
+    "request-promise-native": "^1.0.5"
   },
   "devDependencies": {
     "nodemon": "^1.12.1"
