--- a/package.json
+++ b/package.json
@@ -32,5 +32,10 @@
     "passport-github": "^1.1.0",
     "pg": "^6.2.3",
     "request": "^2.81.0"
+  },
+  "devDependencies": {
+    "babel-eslint": "^8.0.1",
+    "eslint": "^4.10.0",
+    "jscs": "^3.0.7"
   }
 }
