--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "morgan": "1.7.0",
     "passport": "^0.4.0",
     "passport-github": "^1.1.0",
-    "pg": "^6.2.3"
+    "pg": "^6.2.3",
+    "utils": "ConjureLabs/utils"
   },
   "devDependencies": {
     "babel-eslint": "^8.0.1",
