--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "passport": "^0.4.0",
     "passport-github": "^1.1.0",
     "pg": "^6.2.3",
+    "route": "ConjureLabs/route",
     "utils": "ConjureLabs/utils"
   },
   "devDependencies": {
