--- a/package.json
+++ b/package.json
@@ -19,23 +19,23 @@
   },
   "homepage": "https://github.com/ConjureLabs/conjure-api#readme",
   "dependencies": {
+    "@conjurelabs/db": "0.0.2",
+    "@conjurelabs/err": "0.0.2",
+    "@conjurelabs/route": "0.0.1",
+    "@conjurelabs/utils": "0.0.1",
     "async": "^2.3.0",
     "body-parser": "1.15.2",
     "compression": "1.6.2",
     "conjure-core": "git+https://bf0d2cf12288398265bb750e57c0cac1363f78d7:x-oauth-basic@github.com/ConjureLabs/conjure-core.git",
     "cookie-parser": "1.4.3",
     "cookie-session": "2.0.0-alpha.2",
-    "db": "ConjureLabs/db",
     "debug": "2.6.0",
-    "err": "ConjureLabs/err",
     "express": "4.15.2",
     "morgan": "1.7.0",
     "passport": "^0.4.0",
     "passport-github": "^1.1.0",
     "pg": "^6.2.3",
-    "redis": "2.8.0",
-    "route": "ConjureLabs/route",
-    "utils": "ConjureLabs/utils"
+    "redis": "2.8.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.0.1",
