--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "dev": "bash ./bash/yarn/run-dev.sh",
     "lint": "bash ./bash/yarn/lint.sh",
-    "start": "node ./server/"
+    "start": "node ./server/",
+    "install-fresh": "(rm -rf ./node_modules || true) && (rm ./yarn.lock || true) && yarn install"
   },
   "repository": {
     "type": "git",
