--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "bash ./bash/yarn/run-dev.sh",
     "lint": "bash ./bash/yarn/lint.sh",
     "start": "node ./server/",
-    "install-fresh": "(rm -rf ./node_modules || true) && (rm ./yarn.lock || true) && yarn install"
+    "install:fresh": "(rm -rf ./node_modules || true) && (rm ./yarn.lock || true) && yarn install"
   },
   "repository": {
     "type": "git",
