--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "passport": "^0.4.0",
     "passport-github": "^1.1.0",
     "pg": "^7.4.0",
-    "redis": "2.8.0"
+    "redis": "2.8.0",
+    "uuid": "3.2.1"
   },
   "devDependencies": {
     "babel-eslint": "^8.0.1",
