--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "passport-github": "^1.1.0",
     "pg": "^7.4.0",
     "redis": "2.8.0",
+    "request": "2.87.0",
     "uuid": "3.2.1"
   },
   "devDependencies": {
