--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "conjure-core": "git+https://bf0d2cf12288398265bb750e57c0cac1363f78d7:x-oauth-basic@github.com/ConjureLabs/conjure-core.git",
     "cookie-parser": "1.4.3",
     "cookie-session": "2.0.0-alpha.2",
+    "cors": "2.8.4",
     "debug": "2.6.0",
     "express": "4.15.2",
     "morgan": "1.7.0",
